--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -54,9 +54,22 @@ body.docs {
     }
   }
 
-  .parameters {
-    margin-top: 2em;
-    font-size: 16px;
-    text-align: center;
+  article {
+    border-bottom: 1px dashed #000;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+
+    &:last-child {
+      border-bottom: none;
+    }
+
+    .parameters {
+      margin-top: 2em;
+      font-size: 16px;
+      text-align: center;
+    }
+    a {
+      text-decoration: underline;
+    }
   }
 }
