--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -13,14 +13,14 @@ body.docs {
   }
 
   h1, h2, h3, p {
-    padding: 10px;
+    padding: 10px 0;
     margin: 0;
   }
 
   h1, h2, h3 {
     font-weight: 700;
   }
-  
+
   h2 {
     font-size: 46px;
     color: #1f1f1f;
@@ -59,19 +59,20 @@ body.docs {
     margin-bottom: 20px;
     padding-bottom: 20px;
 
+
     &:last-child {
       border-bottom: none;
     }
 
-    .parameters, .examples {
+    .info {
       margin-top: 2em;
       font-size: 16px;
 
       h4 {
-        text-align: center;
+        margin: 10px 0;
       }
     }
-    
+
     a {
       text-decoration: underline;
     }
