--- a/docs/src/scss/partials/_headers.scss
+++ b/docs/src/scss/partials/_headers.scss
@@ -45,6 +45,31 @@ h2 {
     line-height: 1.25;
   }
 }
+
+@mixin header2-font($type) {
+  & {
+    font-size: 1.625em;
+    /* 1.625x body copy size = 26px */
+    line-height: 1.15384615;
+    /* 30px / 26px */
+  }
+  @media (min-width: 43.75em) {
+    &--#{$type} {
+      font-size: 2em;
+      /* 2x body copy size = 32px */
+      line-height: 1.25;
+    }
+  }
+
+  @media (min-width: 56.25em) {
+    &--#{$type} {
+      font-size: 2.25em;
+      /* 2.25x body copy size = 36px */
+      line-height: 1.25;
+    }
+  }
+}
+
 h3 {
   font-size: 1.375em;
   /* 1.375x body copy size = 22px */
