start improving docs

--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -51,7 +51,7 @@ body.docs {
         padding: 0;
       }
 
-      &--params {
+      &--params, &--returns {
         p {
           display: inline-block;
         }
