--- a/docs/src/scss/partials/_colors.scss
+++ b/docs/src/scss/partials/_colors.scss
@@ -1,3 +1,9 @@
 $color-white: #fff;
-$color-grey: #f7f7f7;
+$color-grey: #f6f4f4;
 $color-grey-beige: #f3f3f3;
+$color-wasm-blue: #6551f0;
+$color-wasm-blue-gradient: #654ff0 linear-gradient(to bottom left,#654ff0,#4733bd);
+$color-blackish: rgb(36, 41, 46);
+$color-yellow: #f1c232;
+
+
