--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -1,147 +1,129 @@
-body.docs {
+h2 {
+  padding: 0 10px;
+}
 
-  header {
-    background: #654ff0 linear-gradient(to bottom left,#654ff0,#4733bd);
-    color: #fff;
-    border-bottom: 1px solid white;
-    padding: 0 10px;
-    nav {
-      right: 1em;
-      font-size: 1.15em;
-      padding: 20px 0;
-    }
-    h1 {
-      img {
-        vertical-align: middle;
-        margin-right: 10px;
-      }
-    }
-  }
+hr {
+  width: 70%;
+  border: none;
+  border-bottom: 2px dashed #424242;
+  margin: auto auto 2em;
+  padding-top: 1em;
+}
+
+article {
+  margin-bottom: 20px;
+  padding: 0 10px 20px;
 
   h2 {
-    padding: 0 10px;
+    color: #1f1f1f;
   }
 
-  hr {
-    width: 70%;
-    border: none;
-    border-bottom: 2px dashed #424242;
-    margin: auto auto 2em;
-    padding-top: 1em;
+  h3 {
+    color: #654ff0;
   }
 
-  article {
-    margin-bottom: 20px;
-    padding: 0 10px 20px;
-
-    h2 {
-      color: #1f1f1f;
+  .Info {
+    margin-top: 2em;
+    h4 {
+      margin: 10px 0;
     }
-
-    h3 {
-      color: #654ff0;
-    }
-
-    .Info {
-      margin-top: 2em;
-      h4 {
-        margin: 10px 0;
-      }
-      p {
-        padding: 0;
-      }
-
-      code {
-        font-size: 0.8em;
-        padding: 0 2px;
-        margin-bottom: 1em;
-        background: $color-grey;
-        border: 1px solid #eee;
-      }
-      &--params, &--returns {
-        p {
-          display: inline-block;
-        }
-      }
-    }
-  }
-
-  .Button {
-    font-size: 2em;
-    padding: 0.2em;
-    transition: all .35s ease-in-out;
-
-    @include header2-font(hamburger);
-
-    &--nav {
+    p {
       padding: 0;
     }
-  }
 
-  .Content {
-    &--prose {
-      h1, h2, h3, h4 {
-        font-weight: 300;
-        color: rgba(0, 0, 0, 0.8);
-      }
-      h1, h2, h3 {
-        padding: 0.5rem 0;
-        border-bottom: 1px solid #eaecef;
-      }
-      h1 {
-        margin-bottom: 2rem;
-      }
-      h2, h3 {
-        margin: 1rem 0;
-      }
-      h4 {
-        padding: 0.25rem 0;
-      }
-
+    code {
+      font-size: 0.8em;
+      padding: 0 2px;
+      margin-bottom: 1em;
+      background: $color-grey;
+      border: 1px solid #eee;
+    }
+    &--params, &--returns {
       p {
-        color: #24292e;
-        margin-bottom: 1rem;
-      }
-
-      ul {
-        list-style: square;
-        padding-left: 2em;
-        margin-bottom: 1rem;
-      }
-      li {
-        margin-bottom: 0;
-        margin-top: 0.25em;
+        display: inline-block;
       }
     }
   }
+}
 
-  .TableOfContents {
-    flex-basis: 33%;
-    background: transparent;
-    position: absolute;
-    right: 0;
-    height: 100vh;
-    max-width: 33vw;
-    padding: 20px;
-    font-size: 0.9em;
+.Button {
+  font-size: 2em;
+  padding: 0.2em;
+  transition: all .35s ease-in-out;
 
-    @media (max-width: 60em) {
-      display: none;
-    }
+  @include header2-font(hamburger);
 
-    &--sticky {
-      position: fixed;
-      top: 0;
-    }
+  &--nav {
+    padding: 0;
+  }
+}
 
-    &-title {
+.Documentation {
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 20px;
+  max-width: $size-phablet--min;
+  margin: auto;
+
+  @include for-tablet-landscape-up {
+    flex-flow: row nowrap;
+    max-width: $size-desktop--min;
+  }
+}
+
+.Content {
+  &--prose {
+    h1 {
       text-align: center;
     }
-    &-list {
-      margin-top: 20px;
+    h1, h2, h3, h4 {
+      font-weight: 300;
+      color: rgba(0, 0, 0, 0.8);
     }
-    ul, li {
-      list-style: outside none none !important;
+    h1, h2, h3 {
+      padding: 0.5rem 0;
     }
+    h1 {
+      margin-bottom: 2rem;
+    }
+    h2, h3 {
+      margin: 1rem 0;
+    }
+    h4 {
+      padding: 0.25rem 0;
+    }
+
+    p {
+      color: #24292e;
+      margin-bottom: 1rem;
+    }
+
+    ul {
+      list-style: square;
+      padding-left: 2em;
+      margin-bottom: 1rem;
+    }
+    li {
+      margin-bottom: 0;
+      margin-top: 0.25em;
+    }
+  }
+}
+
+.TableOfContents {
+  background: transparent;
+  padding: 20px 0;
+  font-size: 0.9em;
+  overflow-y: scroll;
+
+  @include for-tablet-landscape-up {
+    flex-basis: 60%;
+    height: 100vh;
+  }
+  &-list {
+    margin-top: 20px;
+  }
+  ul, li {
+    list-style: outside none none !important;
   }
 }
