--- a/docs/src/scss/main.scss
+++ b/docs/src/scss/main.scss
@@ -1,3 +1,7 @@
+@import './mixins/media-queries.scss';
+@import 'partials/colors';
+@import 'partials/headers';
+
 // shared global styling overrides
 @import './base.scss';
 
