--- a/docs/src/scss/partials/_colors.scss
+++ b/docs/src/scss/partials/_colors.scss
@@ -1,4 +1,5 @@
 $color-white: #fff;
+$color-white--transparent: rgba(255, 255, 255, 0.15);
 $color-grey: #f6f4f4;
 $color-grey-beige: #f3f3f3;
 $color-wasm-blue: #6551f0;
