--- a/docs/src/scss/docs.scss
+++ b/docs/src/scss/docs.scss
@@ -84,21 +84,14 @@ article {
     flex-flow: column nowrap;
     max-width: $size-phablet--min;
 
-    h1 {
+    h1, h2 {
+      padding: 0;
       font-weight: normal;
     }
   }
 
   &-overview, &-intro {
     padding: 20px 0;
-  }
-
-  &-overview {
-
-  }
-
-  &-intro {
-
   }
 }
 
